fixing plus button

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   </head>
   <body>
     <header>
-      <img src="./assets/logo.svg" alt="Logomarca do aplicativo Habits" />
+      <img src="./assets/logo.svg" alt="Logo app Habits" />
 
       <button>
-        <img src="./assets/plus.svg" alt="ícone sinal de mais roxo" />
+        <img src="./assets/plus.svg" alt="plus image" />
 
-        <div>Registar o meu dia</div>
+        <div>Register my day </div>
       </button>
     </header>
 
