--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
 
     <form id="form-habits">
       <div class="habits">
-        <div class="habit" data-name="run">🏃🏽‍♂️</div>
-        <div class="habit" data-name="water">💧</div>
-        <div class="habit" data-name="food">🍎</div>
-        <div class="habit" data-name="journal">📰</div>
-        <div class="habit" data-name="takePills">💊</div>
-        <div class="habit" data-name="sleep">😴</div>
+        <div class="habit" data-name="running">🏃🏽‍♂️</div>
+        <div class="habit" data-name="drinkingWater">💧</div>
+        <div class="habit" data-name="eating">🍎</div>
+        <div class="habit" data-name="reading">📰</div>
+        <div class="habit" data-name="takingPills">💊</div>
+        <div class="habit" data-name="cleaning">🧹</div>
+        <div class="habit" data-name="showering">🚿</div>
+        <div class="habit" data-name="sleeping">😴</div>
 
       </div>
 
